fix:安装包脚本问题修改